--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,6 +113,22 @@ nav a {
     line-height: 1.5;
 }
 
+nav a.nav-active {
+    color: white;
+    pointer-events: none;
+}
+
+nav a.nav-active::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: white;
+    transition: width 0.3s ease;
+}
+
 nav a:hover {
     color: white;
     text-decoration: none;
