--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,10 +4,11 @@ body {
     margin: 0;
     padding: 0;
     color: #1a1a1a;
-    background: url('/assets/image/wp.jpg') no-repeat center center;
-    background-size: cover;
+    background: url('/assets/image/wp.jpg') no-repeat center center !important;
+    background-size: cover !important;
     min-height: 100vh;
     opacity: 1;
+    image-rendering: -webkit-optimize-contrast;
     transition: opacity 0.3s ease;
 }
 
