--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -48,6 +48,7 @@ nav {
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     backdrop-filter: blur(3px);
     -webkit-backdrop-filter: blur(3px);
+    width: 100%;
 }
 nav a {
     color: #156c54;
@@ -88,6 +89,24 @@ nav a::after {
 }
 nav a:hover::after {
     width: 100%;
+}
+.nav-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
+}
+.nav-avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 8px;
+    margin-right: 1rem;
+}
+.nav-username {
+    font-size: 1.1rem;
+    line-height: 1.5;
+    margin-right: 1.5rem;
 }
 .container p {
     font-size: 1.1rem;
@@ -183,18 +202,6 @@ nav a:hover::after {
 .github-link a:hover {
     color: #3498db;
 }
-.nav-avatar {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    border: 2px solid white;
-    margin-right: 1rem;
-}
-.nav-username {
-    font-size: 1.1rem;
-    line-height: 1.5;
-    margin-right: 1.5rem;
-}
 .server-config {
     margin-bottom: 2rem;
 }
@@ -239,37 +246,14 @@ nav a:hover::after {
 .page-content.active {
     display: block;
 }
-.slide-in-left {
-    animation-name: slideInLeft;
-}
-.slide-in-right {
-    animation-name: slideInRight;
-}
 .slide-out-left {
     animation-name: slideOutLeft;
 }
 .slide-out-right {
     animation-name: slideOutRight;
 }
-@keyframes slideInLeft {
-    from {
-        transform: translateX(-100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
-}
-@keyframes slideInRight {
-    from {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-    to {
-        transform: translateX(0);
-        opacity: 1;
-    }
+.slide-in-bottom {
+    animation-name: slideInBottom;
 }
 @keyframes slideOutLeft {
     from {
@@ -292,9 +276,7 @@ nav a:hover::after {
         opacity: 0;
     }
 }
-.slide-in-bottom {
-    animation-name: slideInBottom;
-}
+
 @keyframes slideInBottom {
     from {
         transform: translate(-50%, 100%);
