更新背景图片路径

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -108,7 +108,7 @@ html, body {
 }
 
 body {
-    background: url('https://patchwiki.biligame.com/images/ys/c/cd/mcrmwbcdpv5wdpyunbpnhpv8sk1603q.jpg') no-repeat center center fixed;
+    background: url('/assets/image/wp.jpg') no-repeat center center fixed;
     background-size: cover;
     background-color: var(--theme-bg);
     padding-top: calc(var(--navbar-min-height) + var(--gap-lg));
